--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@
    #particles-js{
      width: 100%;
      height: 100%;
-     background-color: transparent;
+     background-color: #000000;
      background-image: url('');
      background-size: cover;
      background-position: 50% 50%;
