--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@
    html,body{ 
        width:100%;
        height:100%;
-       background:rgb(236, 232, 232);
+       background:#111;
    }
    
    html{
