--- a/css/style.css
+++ b/css/style.css
@@ -111,3 +111,28 @@
   from, to { border-color: transparent }
   50% { border-color: orange }
 }
+/* Images */
+img {
+  width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
+
+.pics_in_a_row {
+  display: flex;
+}
+
+.img1 { flex: 1.3344; }
+.img2 { flex: 1.3345; }
+.img3 { flex: 0.7505; }
+.img4 { flex: 1.5023; }
+.img5 { flex: 0.75; }
+
+
+
+/* Aaaand just some general styling. */
+
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
