--- a/css/style.css
+++ b/css/style.css
@@ -122,11 +122,11 @@ img {
   display: flex;
 }
 
-.img1 { flex: 1.3344; }
+/* .img1 { flex: 1.3344; }
 .img2 { flex: 1.3345; }
 .img3 { flex: 0.7505; }
 .img4 { flex: 1.5023; }
-.img5 { flex: 0.75; }
+.img5 { flex: 0.75; } */
 
 
 
