--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,9 @@
      display:block;
      vertical-align:bottom;
    }
-   
+   .container {
+    display: flex; /* or inline-flex */
+  }
    .count-particles{
      background: #000022;
      position: absolute;
