--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,12 @@
     color:white;
   }
 
+element.style {
+  inline-size: 300px;
+  overflow-wrap: break-word;
+}
+
+
 /* DEMO-SPECIFIC STYLES */
 .typewriter h1 {
   color: #fff;
