--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ element.style {
 
 
 /* DEMO-SPECIFIC STYLES */
-.typewriter h1 {
+#typewriter h1 {
   color: #fff;
   font-family: monospace;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
