--- a/css/style.css
+++ b/css/style.css
@@ -223,7 +223,7 @@ body {
   height: 4px;
   width: 100%;
   border-radius: 10px;
-  background: #0e2431;
+  background: #FFFFFF;
 }
 
 .nav-container .hamburger-lines .line1 {
