--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ body {
 
 .navbar .menu-items {
   padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  box-shadow: inset 0 0 2000px rgba(39, 37, 37, 0.5);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
