--- a/css/style.css
+++ b/css/style.css
@@ -241,16 +241,16 @@ body {
 }
 
 .navbar .menu-items {
-  padding-top: 120px;
-  box-shadow: inset 0 0 2000px rgba(39, 37, 37, 0.5);
+  padding-top: 55px;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
   display: flex;
   flex-direction: column;
-  margin-left: -40px;
-  padding-left: 50px;
-  transition: transform 0.5s ease-in-out;
+  margin-left: 0px;
+  padding-left: 0px;
+  transition: transform 0.8s ease-in-out;
   text-align: center;
 }
 
