--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ element.style {
 
 /* DEMO-SPECIFIC STYLES */
 .typewriter h2 {
+  display: inline;
   color: #fff;
   font-family: monospace;
   overflow:scroll; /* Ensures the content is not revealed until the animation */
@@ -102,8 +103,8 @@ element.style {
   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
   letter-spacing: .15em; /* Adjust as needed */
   animation: 
-    typing 5s steps(30, end),
-    blink-caret .5s step-end infinite;
+    typing 5s steps(40, end),
+    blink-caret .75s step-end infinite;
 }
 
 /* The typing effect */
