--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ body {
 }
 
 .flip-card-back {
-  background-color: #2980b9;
-  color: white;
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
   transform: rotateY(180deg);
 }
