--- a/css/style.css
+++ b/css/style.css
@@ -242,7 +242,7 @@ body {
   top: 5px;
   right: 15px;
   font-size: 1.2rem;
-  color: #0e2431;
+  color: #ffffff;
 }
 
 .nav-container input[type="checkbox"]:checked ~ .menu-items {
