--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@
    
    canvas{
      display:block;
+     margin:0;
+     padding:0;
      vertical-align:bottom;
    }
    
@@ -70,7 +72,7 @@
    }
    
    /* ---- particles.js container ---- */
-   #particles-js{
+   #particles-js, canvas{
      width: 100%;
      height: 100%;
      background-color: #000000;
