--- a/css/style.css
+++ b/css/style.css
@@ -220,8 +220,8 @@ body {
 }
 
 .navbar .menu-items {
-  padding-top: 55px;
-  box-shadow: inset 0 0 2000px rgba(255, 255, 255);
+  padding-top: 77px;
+  box-shadow: inset 0 0 2000px rgba(0, 0, 0);
   height: 100vh;
   width: 100%;
   transform: translate(-150%);
@@ -230,7 +230,7 @@ body {
   margin-left: 0px;
   padding-left: 0px;
   transition: transform 0.8s ease-in-out;
-  text-align: center;
+  text-align: left;
 }
 
 .navbar .menu-items li {
