--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-
+/* Generic Styling */
    html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}
    body{line-height:1}
    article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
@@ -32,9 +32,10 @@
      display:block;
      margin:0;
      padding:0;
-     vertical-align:bottom;
+     /* vertical-align:bottom; */
    }
-   
+   /* Count Particles if needed */
+/*    
    .count-particles{
      background: #000022;
      position: absolute;
@@ -53,7 +54,7 @@
    
    .js-count-particles{
      font-size: 1.1em;
-   }
+   } */
    
    #stats,
    .count-particles{
@@ -71,7 +72,7 @@
      border-radius: 0 0 3px 3px;
    }
    
-   /* ---- particles.js container ---- */
+/* ---- particles.js container ---- */
    #particles-js, canvas{
      width: 100%;
      height: 100%;
@@ -266,7 +267,7 @@ body {
 .nav-container input[type="checkbox"]:checked ~ .logo{
   display: none;
 }
-
+/* Flip Card */
 .flip-card {
   background-color: transparent;
   width: 300px;
@@ -306,3 +307,4 @@ body {
   color: rgb(0, 0, 0);
   transform: rotateY(180deg);
 }
+/* Party popping */
