--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
    .output {
     text-align:center;
     font-family: 'Source Code Pro', monospace;
-    color:white;
+    color:rgb(255, 255, 255);
   }
 
 element.style {
